MCS fix text wrapping

--- a/MCS/styles.css
+++ b/MCS/styles.css
@@ -30,7 +30,6 @@ h1, h4 {
     margin: 30px;
     background-color: dodgerblue;
     padding: 10px;
-    white-space: nowrap;
 }
 
 .content2 {
